<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp_Company"
    android:background="@color/white"
    android:paddingLeft="@dimen/padding_activity"
    android:paddingRight="@dimen/padding_activity"
    >
<RelativeLayout
    android:layout_marginTop="@dimen/margin_fifteen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <LinearLayout
        android:layout_below="@id/password"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/companyEdit"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:background="@drawable/border_edittext"
            android:drawableRight="@drawable/ic_building"
            android:drawablePadding="@dimen/margin_fifteen"
            android:fontFamily="@font/cairo"
            android:hint="@string/company_name"
            android:padding="@dimen/margin_ten"
            android:textColor="@color/black"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/nameCompany"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="@dimen/txtSize10sp"
            android:fontFamily="@font/cairo"
             />
        <TextView
            android:id="@+id/placeTxtview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin36"
            android:drawableRight="@drawable/ic_map_marker_alt"
            android:drawablePadding="@dimen/margin_fifteen"
            android:fontFamily="@font/cairo_bold"
            android:text="@string/place"
            android:textColor="@color/gray"
            android:textSize="12sp" />
        <android.support.v4.widget.NestedScrollView
            android:layout_width="266dp"
            android:layout_height="130dp"
            android:padding="@dimen/margin_five"
            android:layout_marginTop="@dimen/margin_fifteen"
            android:layout_marginLeft="@dimen/margin_fifteen">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@+id/place"
                    android:orientation="vertical"
                    >
                  <RadioButton
                      android:id="@+id/radioButton_gaza"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:text="@string/Gaza"
                      android:textSize="14sp"
                      android:textColor="@color/gray"
                      android:fontFamily="@font/cairo"
                      android:paddingLeft="190dp"
                      />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_north"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/north_gaza"
                        />

                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_east"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/beetHanoon"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_west"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/bait_lahia"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_bni"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/bni_sohila"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_middle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/middle_gaza"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_dair"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/dair_albalah"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_south"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/south_gaza"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_rafah"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/rafah"
                        />
                    <RadioButton
                        android:layout_marginTop="@dimen/margin_five"
                        android:id="@+id/radioButton_jabalia"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:fontFamily="@font/cairo"
                        android:textColor="@color/gray"
                        android:paddingLeft="132dp"
                        android:text="@string/jabalia"
                        />
                </RadioGroup>

            </LinearLayout>

           </android.support.v4.widget.NestedScrollView>

        <EditText
            android:id="@+id/AddressEdit"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin36"
            android:background="@drawable/border_edittext"
            android:drawableRight="@drawable/ic_thumbtack"
            android:drawablePadding="@dimen/margin_fifteen"
            android:fontFamily="@font/cairo"
            android:hint="@string/company_website"
            android:padding="@dimen/margin_ten"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/companyAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="@dimen/txtSize10sp"
            android:fontFamily="@font/cairo"
            />
        <EditText
            android:id="@+id/mobileEdit"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin36"
            android:background="@drawable/border_edittext"
            android:fontFamily="@font/cairo"
            android:hint="@string/mobile_num"
            android:inputType="phone"
            android:padding="@dimen/margin_ten"
            android:textColor="@color/black"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/companyJawwal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="@dimen/txtSize10sp"
            android:fontFamily="@font/cairo"
            />
        <EditText
            android:id="@+id/phoneEdit"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin36"
            android:background="@drawable/border_edittext"
            android:fontFamily="@font/cairo"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:padding="@dimen/margin_ten"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/webEdit"
            android:layout_width="266dp"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/margin36"
            android:background="@drawable/border_edittext"
            android:drawableRight="@drawable/ic_globe_africa"
            android:drawablePadding="@dimen/margin_fifteen"
            android:fontFamily="@font/cairo"
            android:hint="@string/website_optional"
            android:padding="@dimen/margin_ten"
            android:textColor="@color/black"
            android:textSize="14sp"

            />
        <TextView

            android:id="@+id/companyWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/pink"
            android:textSize="@dimen/txtSize10sp"
            android:fontFamily="@font/cairo"
            />
    </LinearLayout>


    <Button
        android:layout_below="@+id/linear"
        android:id="@+id/btn_signUp_Company"
        android:textColor="@color/white"
        android:layout_width="266dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:text="@string/signUp"
        android:background="@drawable/button_bg"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        style="?android:borderlessButtonStyle"
        />

</RelativeLayout>
</ScrollView>