<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentNotFound"
    android:background="@color/white"
    android:id="@+id/fragment_not_found">

    <TextView
        android:id="@+id/NotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_found"
        android:fontFamily="@font/cairo_bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_fifteen"
        />
    <ImageView
        android:id="@+id/photoNotFound"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:src="@drawable/not_found"
        android:layout_below="@id/NotFound"
        />
    <RelativeLayout
        android:id="@+id/oops"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/photoNotFound"
        android:layout_width="wrap_content"
        android:layout_marginRight="@dimen/margin45"
        android:layout_marginLeft="@dimen/margin31"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ops"
            android:layout_marginLeft="@dimen/margin31"
            android:layout_alignParentLeft="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Oops"
            android:fontFamily="@font/lato_black"
            android:textColor="@color/black"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/not_account"
            android:layout_toRightOf="@+id/ops"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exclamation"
            android:textColor="@color/blue"
            android:fontFamily="@font/lato_black"
            android:textSize="22sp"
            />
         <TextView
             android:layout_marginTop="3dp"
             android:layout_toRightOf="@+id/not_account"
             android:layout_marginLeft="@dimen/margin_five"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/cairo_bold"
             android:textColor="@color/light"
             android:text="@string/you_notHave"
             android:textSize="14sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/oops"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/we_happy"
            android:fontFamily="@font/cairo"
            android:textColor="@color/black"
            android:textSize="12sp"
            />
        <TextView
            android:id="@+id/signup_txt"
            android:layout_marginLeft="@dimen/margin_five"
            android:layout_marginRight="@dimen/margin_five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cairo_bold"
            android:textColor="@color/blue"
            android:text="@string/sign_up"
            android:lines="1"
            android:maxLines="2"
            style="@style/sectionHeader"
            android:textSize="10sp"
            />

    </LinearLayout>
    </RelativeLayout>
