<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen"
   android:background="@color/white">
    <LinearLayout
        android:id="@+id/logo"
        android:layout_marginTop="85dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="49dp"
                android:layout_height="49dp"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_marginTop="10dp"
                android:text="@string/JOBS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginRight="4dp"
                android:layout_marginLeft="2dp"
                android:textColor="@color/blue"
                android:fontFamily="@font/cairo_black"
                />
            <TextView
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/GAZA"
                android:textSize="20sp"
                android:fontFamily="@font/cairo_black"
                />
        </LinearLayout>
        <TextView
            android:layout_marginTop="@dimen/margin_five"
            android:textColor="@color/gray"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_job"
            android:fontFamily="@font/cairo"
             />
    </LinearLayout>

    <ImageView
        android:layout_below="@id/logo"
        android:layout_marginTop="20dp"
        android:id="@+id/imageCenter"
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:src="@drawable/splachscreen"
        />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/pattern"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

</RelativeLayout>